manifests/31-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ca1-gateway
  namespace: ca1
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - localhost
      secretName: ca-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-svc
                port:
                  number: 80
