manifests/99-localhost-new-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ca1-gateway-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: gateway-svc.ca1.svc.cluster.local
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ca1-http-interceptor-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/checkout
            pathType: Prefix
            backend:
              service:
                name: ca1-http-interceptor-proxy
                port:
                  number: 8080
          - path: /api/ping
            pathType: Prefix
            backend:
              service:
                name: ca1-gateway-proxy
                port:
                  number: 80
          - path: /api/arch
            pathType: Prefix
            backend:
              service:
                name: ca1-gateway-proxy
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ca1-gateway-proxy
                port:
                  number: 80
